# ChangeLog for kde-base/kdemultimedia-kioslaves
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/kdemultimedia-kioslaves/ChangeLog,v 1.82 2008/01/29 16:35:59 armin76 Exp $

  29 Jan 2008; Raúl Porcel <armin76@gentoo.org>
  kdemultimedia-kioslaves-3.5.8.ebuild:
  alpha/ia64/sparc stable wrt #207634

*kdemultimedia-kioslaves-4.0.0-r1 (29 Jan 2008)

  29 Jan 2008; Ingmar Vanhassel <ingmar@gentoo.org>
  +files/kdemultimedia-kioslaves-4.0.0-flac-1.1.3.patch,
  +kdemultimedia-kioslaves-4.0.0-r1.ebuild,
  -kdemultimedia-kioslaves-4.0.0.ebuild:
  Fix USE=flac handling, bug 207987.

  28 Jan 2008; Wulf C. Krueger <philantrop@gentoo.org>
  kdemultimedia-kioslaves-3.5.8.ebuild:
  Marked stable on amd64 as per bug 207634.

*kdemultimedia-kioslaves-4.0.0 (17 Jan 2008)

  17 Jan 2008; Wulf C. Krueger <philantrop@gentoo.org>
  +kdemultimedia-kioslaves-4.0.0.ebuild:
  Added KDE 4.0.0's kdemultimedia-kioslaves.

  21 Oct 2007; Joe Peterson <lavajoe@gentoo.org>
  +files/kdemultimedia-kioslaves-3.5.8-freebsd.patch,
  kdemultimedia-kioslaves-3.5.8.ebuild:
  Patch to compile on FreeBSD

*kdemultimedia-kioslaves-3.5.8 (19 Oct 2007)

  19 Oct 2007; Wulf C. Krueger <philantrop@gentoo.org>
  +kdemultimedia-kioslaves-3.5.8.ebuild:
  Bump to KDE 3.5.8.

  11 Aug 2007; Raúl Porcel <armin76@gentoo.org>
  kdemultimedia-kioslaves-3.5.7.ebuild:
  x86 stable wrt #185823

  10 Aug 2007; Christoph Mende <angelos@gentoo.org>
  kdemultimedia-kioslaves-3.5.7.ebuild:
  Stable on amd64 wrt bug #176297

  09 Aug 2007; Markus Rothe <corsair@gentoo.org>
  kdemultimedia-kioslaves-3.5.7.ebuild:
  Stable on ppc64; bug #176297

  08 Aug 2007; Raúl Porcel <armin76@gentoo.org>
  kdemultimedia-kioslaves-3.5.7.ebuild:
  alpha/ia64 stable wrt #176297

  07 Aug 2007; Joseph Jezak <josejx@gentoo.org>
  kdemultimedia-kioslaves-3.5.7.ebuild:
  Marked ppc stable.

  07 Aug 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  kdemultimedia-kioslaves-3.5.7.ebuild: